# RandomF

./: .dockerignore  README.md  Random-ForestV2.ipynb  buil.sh  db.sqlite3  dockerfile  manage.py  pyproject.toml  render.yaml  requirements.txt
detection_app/: admin.py  apps.py  models.py  views.py
detection_app/templates/detection_app/: results.html
malware_detector/: settings.py  urls.py  wsgi.py
