[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malware-detector"
version = "0.1.0"
dependencies = [
    "Django==4.2.7",
    "pandas==2.2.3",
    "numpy==2.0.0",
    "scikit-learn==1.5.0",
    "matplotlib==3.8.0",
    "seaborn==0.13.2",
    "Pillow==10.3.0",
    "gunicorn==21.2.0",
    "whitenoise==6.6.0",
]
